<resources>
    <!--<string name="app_name">晓懒来啊</string>-->


    <!--cash_day-->
    <string name="statistics_text">收支统计</string>
    <string name="tv_money_default_text">¥---</string>
    <string name="pay_text">支出</string>
    <string name="income_text">收入</string>
    <string name="sort_text">类别</string>
    <string name="subdivision_text">细分</string>
    <string name="time_text">时间</string>
    <string name="money_text">金额</string>
    <string name="location_text">位置</string>
    <string name="toolbar_title_text">标题</string>
    <string name="default_text">----</string>
    <string name="add_project">项目</string>
    <string name="et_default_text">请输入</string>
    <string name="tv_default_text">请选择</string>
    <string name="save_tv">保存</string>
    <string name="type_text">类型</string>
    <string name="project_num_text">编号</string>
    <string name="add_text">添加</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
</resources>
