<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="110dp"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/one_fragment_background"
>
    <TextView
            android:id="@+id/number"
            android:text="编号"
            android:textColor="@color/color_common_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:layout_margin="10dp"
    />

    <TextView
            android:id="@+id/type"
            android:text="Type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/blue_corner_background"
            app:layout_constraintBottom_toBottomOf="@+id/number"
            app:layout_constraintRight_toRightOf="parent"

    />
    <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/number"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_background"
            />
    <TextView
            android:id="@+id/project"
            android:text="@string/project_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="@dimen/dp_ten"
            app:layout_constraintLeft_toLeftOf="@+id/number"
    />
    <TextView
            android:id="@+id/time"
            android:text="@string/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/project"
            app:layout_constraintLeft_toLeftOf="@+id/project"
            android:layout_marginTop="@dimen/dp_twenty"
    />

    <TextView
            android:id="@+id/money"
            android:text="@string/money_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/location"
            app:layout_constraintBottom_toBottomOf="@+id/project"
    />


    <TextView
            android:id="@+id/location"
            android:text="@string/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_twenty"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/time"
    />

</androidx.constraintlayout.widget.ConstraintLayout>