<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable name="vm"
                  type="com.w.xiaolanlaia.main.day.DayViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.w.xiaolanlaia.util.widget.AppToolbar
                android:id="@+id/day_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:toolbar_title="收支统计"
                app:toolbar_style="day"
                app:transferOnClick="@{vm.cashDayClick}"
                app:addOnClick="@{vm.cashDayClick}"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/color_common_white"
                android:gravity="center"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/left_ward_tv"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_25"
                        android:src="@mipmap/left_arrow"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:onClick="@{vm.cashDayClick}"/>
                <TextView
                        android:text="@{vm.periodText}"
                        android:textColor="@color/color_common_red"
                        android:gravity="center"
                        android:id="@+id/period_text"
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_2"
                        android:paddingBottom="@dimen/dp_2"
                        android:paddingEnd="@dimen/dp_10"
                        android:drawableEnd="@mipmap/downward"
                        android:background="@drawable/round_line_background"
                        android:onClick="@{vm.cashDayClick}"
                        tools:ignore="RtlSymmetry"/>
                <ImageView
                        android:id="@+id/right_ward_tv"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_25"
                        android:src="@mipmap/right_arrow"
                        android:layout_marginStart="@dimen/dp_10"
                        android:onClick="@{vm.cashDayClick}"/>

            </LinearLayout>

            <TextView
                    android:text="@string/statistics_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    style="@style/cash_day_grey"
            />
            <TextView
                    android:id="@+id/tv_accountant"
                    android:text="@string/tv_money_default_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    style="@style/cash_day_black"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_common_white"

        >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
            >
                <TextView
                        android:text="@string/pay_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/cash_day_grey"
                />
                <TextView
                        android:id="@+id/tv_pay"
                        android:text="@string/tv_money_default_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        style="@style/cash_day_blue"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"


            >
                <TextView
                        android:text="@string/income_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/cash_day_grey"
                />
                <TextView
                        android:id="@+id/tv_income"
                        android:text="@string/tv_money_default_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        style="@style/cash_day_red"
                />
            </LinearLayout>
        </LinearLayout>



        <com.google.android.material.tabs.TabLayout
                android:id="@+id/day_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/color_hint_grey"
                app:tabSelectedTextColor="@color/color_text_blue"
                app:tabIndicatorColor="@color/color_text_blue"
                app:tabIndicatorFullWidth="false"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/color_common_white"
        />
        <com.google.android.material.tabs.TabLayout
                android:id="@+id/transfer_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextColor="@color/color_hint_grey"
                app:tabSelectedTextColor="@color/color_text_blue"
                app:tabIndicatorColor="@color/color_text_blue"
                app:tabIndicatorFullWidth="false"
                android:background="@drawable/round_line_background"

        />

        <com.baoyz.widget.PullRefreshLayout
                android:id="@+id/pull_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
            >
                <androidx.viewpager.widget.ViewPager
                        android:id="@+id/day_view_page"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                />
                <androidx.viewpager.widget.ViewPager
                        android:id="@+id/trend_view_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                />
            </LinearLayout>



        </com.baoyz.widget.PullRefreshLayout>

    </LinearLayout>
</layout>